--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
         <h1>DESCULPAS 
             <h2>AGR TA CERTO </h2>
             <p>LIJNDOSSSS</p> 
-            <img scr="imagens/IMG_9203.jpg" alt=repudio>
+            <a href="https://photos.app.goo.gl/h1Drt8UVWVQdrefW8">CLIQUE AQUIII Ó</a>
+
     
     </body>
     
